Add built-in commands: cd, echo, env, exit, export, pwd, unset

--- a/builtins/Makefile
+++ b/builtins/Makefile
@@ -6,7 +6,7 @@
 #    By: kharuya <haruya.0411.k@gmail.com>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/04/01 15:59:55 by katakada          #+#    #+#              #
-#    Updated: 2025/04/01 19:50:25 by kharuya          ###   ########.fr        #
+#    Updated: 2025/04/03 20:15:55 by kharuya          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,10 +17,13 @@ DEBUG_CC		=	cc -D IS_DEBUG=1 -g -fsanitize=address
 
 CFLAGS			=	-Wall -Wextra -Werror
 
-INCS			=	-I includes/
+INCS			=	-I includes/ -I $(LIBFT_DIR)
 
 SRC_PATH		=	
 SRCS			=	$(wildcard $(SRC_PATH)*.c)
+
+LIBFT_DIR		=	../libraries/
+LIBFT			=	$(LIBFT_DIR)libft.a
 
 OBJS_PATH		=	objs/
 OBJS			=	$(SRCS:%.c=objs/%.o)
@@ -33,13 +36,15 @@ endif
 
 
 
-$(NAME): $(OBJS)
-	$(CC) $(CFLAGS) $(INCS) $(OBJS) -o $(NAME)
+$(NAME): $(OBJS) $(LIBFT)
+	$(CC) $(CFLAGS) $(INCS) $(OBJS) $(LIBFT) -o $(NAME)
 
 $(OBJS_PATH)%.o : $(SRC_PATH)%.c
 	mkdir -p $(@D)
 	$(CC) $(CFLAGS) $(INCS) -c $< -o $@
 
+$(LIBFT):
+	make bonus -C $(LIBFT_DIR)
 
 all:	$(NAME)
 
@@ -48,9 +53,11 @@ debug:
 
 
 clean:
+	make clean -C $(LIBFT_DIR)
 	rm -rf $(OBJS_PATH)
 
 fclean:
+	make fclean -C $(LIBFT_DIR)
 	rm -rf $(OBJS_PATH)
 	rm -f $(NAME)
 
